--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/dhs-mualphatheta/forty.git
 [submodule "public"]
 	path = public
-	url = https://github.com/dhs-mualphatheta/dhs-mualphatheta.github.io.git
+	url = git@github.com:dhs-mualphatheta/dhs-mualphatheta.github.io.git
